# open-yoc

boards/d1_evb/: package.yaml
components/alg_kws_thead/: inference.cc  package.yaml
components/alg_pcm_input/: data_input.cc  package.yaml  pcm_from_http.cc
components/alg_postproc_thead/: package.yaml  post_process.cc
components/alg_record/: package.yaml  record.cc  record_process.cc
components/alg_ssp_thead/: package.yaml  pre_process.cc
components/alg_vad_thead/: README.md  package.yaml  vad_proc.cc
components/amrnb/: package.yaml
components/amrwb/: package.yaml
components/aos/: package.yaml
components/aos_port/: CMakeLists.txt  README.md  package.yaml
components/aos_port/include/aos_port/: common.h  list.h  port.h
components/aos_port/src/: list.c  port.c
components/aoshal/: package.yaml
components/at/: atserver.c  package.yaml
components/aui_cloud_mind/: README.md  package.yaml
components/av/: package.yaml
components/ble_host/: package.yaml
components/ble_mesh/: package.yaml
components/breeze/: package.yaml
components/chip_d1/: aos_pcm.c  gcc_flash.ld  package.yaml
components/cjson/: package.yaml
components/cli/: package.yaml
components/csi/: package.yaml
components/dbus/: package.yaml
components/dbus_knife/: package.yaml
components/debug/: README.md  package.yaml
components/drv_amplifier/: drv_amp.c  package.yaml
components/drv_bt_rtl8723ds/: package.yaml
components/drv_wifi_rtl8723ds/: package.yaml
components/drv_wifi_xr829/: package.yaml
components/duktape/: package.yaml
components/ers/: package.yaml
(+673 files in other folders)
